Updated version in docs

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,7 +1,12 @@
 PadoGrid
 ========
 
-Release: Version 0.9.1-SNAPSHOT
-Release Date: 
+Release: Version 0.9.1
+Release Date: 04/20/20
+
+- Initial consolidated release.
+- Most of the merged features have been tested and fully operational.
+- In need of additional clean up in the are of docs, VMs, and common commands.
+- This version serves as the base version for supporting additional products other than Geode/GemFire and Hazelcast/Jet.
 
 *************************************************************************
