--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,11 @@
 PadoGrid
 ========
 
+Release: Version 0.9.2-SNAPSHOT
+Release Date: 
+
+*************************************************************************
+
 Release: Version 0.9.1
 Release Date: 04/20/20
 
