--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -2,7 +2,11 @@ PadoGrid
 ========
 
 Release: Version 0.9.2-SNAPSHOT
-Release Date: 
+Release Date: 05/21/20
+
+- Added support for SnappyData/ComputeDB.
+- Added support for Gitea. You can now create catalogs in private Gitea repos
+- Added support for Minishift.
 
 *************************************************************************
 
