Added OpenShift support for Hazelcast.

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -2,11 +2,13 @@ PadoGrid
 ========
 
 Release: Version 0.9.2-SNAPSHOT
-Release Date: 05/21/20
+Release Date: 05/23/20
 
 - Added support for SnappyData/ComputeDB.
 - Added support for Gitea. You can now create catalogs in private Gitea repos
-- Added support for Minishift.
+- Added Minishift support for Hazelcast.
+- Added OpenShift support for Hazelcast.
+- Added Jet 4.x support for the jet_demo app.
 
 *************************************************************************
 
