--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,9 +1,10 @@
 PadoGrid
 ========
 
-Release: Version 0.9.2-SNAPSHOT
-Release Date: 05/31/20
+Release: Version 0.9.2
+Release Date: 07/25/20
 
+- Added AVRO and Kryo code generators for Hazelcast.
 - Added cluster support for SnappyData/ComputeDB.
 - Added cluster support for Coherence.
 - Added support for Gitea. You can now create catalogs in private Gitea repos
