--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,19 @@
 PadoGrid
 ========
 
+Release: Version 0.9.3-SNAPSHOT
+Release Date: 09/07/20
+
+- Added support for generating '-all' dependencies. Each product module now has
+  a `padogrid-<product>-all-*.jar' file containing a complete set compiled classes.
+  You can now include just a single '-all' jar file in your class path.
+- Added the `-workspace` option to `install_bundle` for checking out bundles in the
+  form of workspaces. With this option, you can now develop and test online bundles
+  from workspaces and check in your changes directly from there.
+- Added support for Hazelcast ReplicatedMap in the Debezium connector.
+  
+*************************************************************************
+
 Release: Version 0.9.2
 Release Date: 07/25/20
 
