Added support for all JDK versions

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -4,6 +4,7 @@ PadoGrid
 Release: Version 0.9.3-SNAPSHOT
 Release Date: 09/07/20
 
+- Added support for all JDK version. Further tests required.
 - Added support for generating '-all' dependencies. Each product module now has
   a `padogrid-<product>-all-*.jar' file containing a complete set compiled classes.
   You can now include just a single '-all' jar file in your class path.
