--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,8 +1,8 @@
 PadoGrid
 ========
 
-Release: Version 0.9.3-SNAPSHOT
-Release Date: 09/07/20
+Release: Version 0.9.3
+Release Date: 09/23/20
 
 - Added support for all JDK version. Further tests required.
 - Added support for generating '-all' dependencies. Each product module now has
