Upgraded version to 0.9.4-SNAPSHOT

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,13 @@
 PadoGrid
 ========
 
+Release: Version 0.9.4-SNAPSHOT
+Release Date: 09/23/20
+
+- TBD
+  
+*************************************************************************
+
 Release: Version 0.9.3
 Release Date: 09/23/20
 
