Added Pado support notice

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -2,9 +2,11 @@ PadoGrid
 ========
 
 Release: Version 0.9.4-SNAPSHOT
-Release Date: 09/23/20
+Release Date: 10/09/20
 
-- TBD
+- Added integrated support for Pado. You can now create a Pado cluster using the 'create_cluster -type pado'
+  command, which creates a Pado cluster that includes the ETL, security and test tools.
+- Pado Desktop is also available for managing Pado clusters.
   
 *************************************************************************
 
