Updated release notes

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -2,10 +2,14 @@ PadoGrid
 ========
 
 Release: Version 0.9.4-SNAPSHOT
-Release Date: 10/09/20
+Release Date: 11/22/20
 
-- Added integrated support for Pado. You can now create a Pado cluster using the 'create_cluster -type pado'
-  command, which creates a Pado cluster that includes the ETL, security and test tools.
+- perf_test now supports data structures other than Hazelcast IMap. Supported
+  data structures are IMap, ReplicatedMap, ICache, ITopic, ReplicatedTopic,
+  and IQueue. 
+- Added integrated support for Pado. You can now create a Pado cluster using the
+  'create_cluster -type pado' command, which creates a Pado cluster that includes
+  the ETL, security and test tools.
 - Pado Desktop is also available for managing Pado clusters.
   
 *************************************************************************
