Included Jet aggregator support

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -2,8 +2,11 @@ PadoGrid
 ========
 
 Release: Version 0.9.4-SNAPSHOT
-Release Date: 11/22/20
+Release Date: 12/15/20
 
+- Added Jet core module that includes support for Kafka stream aggregator. The
+  aggregator is a Jet sink job capable of transforming Kafka events from multiple
+  topics into an object graph based on temporal entity relationships.
 - perf_test now supports data structures other than Hazelcast IMap. Supported
   data structures are IMap, ReplicatedMap, ICache, ITopic, ReplicatedTopic,
   and IQueue. 
