UPdated release notes

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -4,7 +4,7 @@ PadoGrid
 Release: Version 0.9.4-SNAPSHOT
 Release Date: 01/10/21
 
-- Fixed a VM synchronization bug.
+- Fixed a VM synchronization and vm key bug.
 - RWE now selects the first workspace found as the default workspace if the default
   workspace is not defined.
 - Added Jet core module that includes support for Kafka stream aggregator. The
