Promoted version to 0.9.4

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,7 +1,7 @@
 PadoGrid
 ========
 
-Release: Version 0.9.4-SNAPSHOT
+Release: Version 0.9.4
 Release Date: 01/10/21
 
 - Fixed a VM synchronization and vm key bug.
