Promoted version to 0.9.5-SNAPSHOT

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,11 @@
 PadoGrid
 ========
 
+Release: Version 0.9.5-SNAPSHOT
+Release Date: 01/10/21
+
+*************************************************************************
+
 Release: Version 0.9.4
 Release Date: 01/10/21
 
