Added find_padogrid for searching files in RWEs

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -2,7 +2,11 @@ PadoGrid
 ========
 
 Release: Version 0.9.5-SNAPSHOT
-Release Date: 01/10/21
+Release Date: 02/09/21
+
+- Added find_padogrid for searching files in PadoGrid. You can now perform
+  a global search on your RWEs for any files that are part of workspace installations.
+- Added support for DB ingestion and updated 'test_group' with 'clear' support in Geode.
 
 *************************************************************************
 
